Closed Bug 1279641 Opened 10 years ago Closed 10 years ago

[css-grid] 'span' is an invalid <custom-ident> in line name lists

Categories

(Core :: CSS Parsing and Computation, defect, P3)

defect

Tracking

()

RESOLVED FIXED
mozilla50
Tracking Status
firefox50 --- fixed

People

(Reporter: MatsPalmgren_bugz, Assigned: MatsPalmgren_bugz)

References

(Blocks 1 open bug)

Details

(Keywords: dev-doc-complete)

Attachments

(1 file)

We currently reject 'span' as a <custom-ident> only in grid-row/column. We should reject it in all line name lists too. https://drafts.csswg.org/css-grid/#typedef-line-names https://lists.w3.org/Archives/Public/www-style/2016Jun/0031.html https://drafts.csswg.org/css-values-3/#identifier-value (It /appears/ all names are valid in 'grid-template-areas' though: https://drafts.csswg.org/css-grid/#grid-template-areas-property since they are just strings with no additional restrictions, AFAICT. So, grid-template-areas:"inherit"; is a valid declaration, and grid-row:inherit-end; would match that area's end edge.)
Summary: [css-grid] 'span' is an invalid <cutstom-ident> in line name lists → [css-grid] 'span' is an invalid <custom-ident> in line name lists
If you haven't already started working on this, would it be all right if I co-opt this as a "good first bug" for an intern who starts in 2 weeks? (I could find another one as well; just pouncing on this one, since it fits the desired "good-first-bug" criteria of being a relatively small layout/style-system change, which affects behavior & is testable.)
Flags: needinfo?(mats)
Sorry, I already wrote the patch. It's a one-liner so probably a little bit too easy for an intern anyway.
Flags: needinfo?(mats)
Fair enough, no worries. (Let me know if you come across any other similarly-simple+testable changes that we need to make, which I can co-opt for an intern.)
Attached patch fix+testsSplinter Review
I fixed a few of the existing invalid values in the test as well. I think we forgot to updated these when we switched from () to [] in the line name list syntax. https://treeherder.mozilla.org/#/jobs?repo=try&revision=603bf6d664f22c084dcd022aae3e2a374a9e783c
Attachment #8762276 - Flags: review?(dholbert)
Attachment #8762276 - Flags: review?(dholbert) → review+
Pushed by mpalmgren@mozilla.com: https://hg.mozilla.org/integration/mozilla-inbound/rev/de7c0a103182 [css-grid] Make 'span' an invalid <custom-ident> in line name lists. r=dholbert
Flags: in-testsuite+
Status: NEW → RESOLVED
Closed: 10 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla50
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: