Bug 1279641 - [css-grid] Make 'span' an invalid <custom-ident> in line name lists.  r=dholbert